################################2016-5########################
add_executable(LCS1 2016-05/LCS1.cpp 2016-05/LCS1_POJ_AGTC.cpp)
add_executable(LCS2 2016-05/LCS2.cpp)
add_executable(LCS1_huiwenchuan 2016-05/LCS1_huiwenchuan.cpp)
add_executable(LCS1_POJ_AGTC 2016-05/LCS1_POJ_AGTC.cpp)
add_executable(SingleNumber 2016-05/SingleNumber_leetcode.cpp)
add_executable(InsertSort_for_List 2016-05/InsertSort_for_List.cpp)
add_executable(biantaitiaotaijie 2016-05/biantaitiaotaijie.cpp)

#############################2017.12.3###########################
add_executable(2StackImplQueue 2017-12/2StackImplQueue.cpp) #两个栈实现队列
add_executable(2QueueImplStack 2017-12/2QueueImplStack.cpp) #两个队列实现栈
add_executable(Stack_with_MinVal 2017-12/Stack_with_MinVal.cpp) #带最小值的栈


############################堆排序#######################
add_executable(HeapSort 堆排序/HeapSort.cpp)
add_executable(QuickSort 快速排序/QuickSort.cpp)

###################筛素数_位操作压缩空间####################
add_executable(primes 筛素数_位操作压缩空间/primes.cpp)

################大数阶乘######################
add_executable(BigNumFact 大数阶乘/BigNumFact.cpp)