################################2016-5########################
add_executable(LCS1 2016-05/LCS1.cpp)
add_executable(LCS2 2016-05/LCS2.cpp)
add_executable(LCS1_huiwenchuan 2016-05/LCS1_huiwenchuan.cpp)
add_executable(LCS1_POJ_AGTC 2016-05/LCS1_POJ_AGTC.cpp)
add_executable(SingleNumber 2016-05/SingleNumber_leetcode.cpp)
add_executable(InsertSort_for_List 2016-05/InsertSort_for_List.cpp)
add_executable(biantaitiaotaijie 2016-05/biantaitiaotaijie.cpp)
#############################2017.12.3###########################
add_executable(2StackImplQueue 2017-12/2StackImplQueue.cpp) #两个栈实现队列
add_executable(2QueueImplStack 2017-12/2QueueImplStack.cpp) #两个队列实现栈
add_executable(Stack_with_MinVal 2017-12/Stack_with_MinVal.cpp) #带最小值的栈
############################堆排序#######################
add_executable(HeapSort 堆排序/HeapSort.cpp)
add_executable(QuickSort 快速排序/QuickSort.cpp)
###################筛素数_位操作压缩空间####################
add_executable(primes 筛素数_位操作压缩空间/primes.cpp)
################大数阶乘######################
add_executable(BigNumFact 大数阶乘/BigNumFact.cpp)
add_executable(reverseList 链表翻转/reverseList.cpp)
############################
add_executable(LCS_1 最长公共子序列_不必连续/LCS.cpp)
add_executable(LCS_2 最长公共子串_连续/LCS2.cpp)
add_executable(min_stack 包含min函数的栈/min_stack.cpp)
add_executable(ugly 丑数/ugly.cpp)
add_executable(gcd 辗转相除法/gcd.cpp)
###############位运算###############
#add_executable(add 位运算/add.cpp)
#add_executable(MergeArray 合并区间/MergeArray.cpp)
add_executable(InsertInterval 合并区间/InsertInterval.cpp)
add_executable(ArrayPairable 数组配对/ArrayPairable.cpp)
add_executable(partition 快排分区函数/partition.cpp)
add_executable(arrayRepeat 判断数组中有无重复元素/arrayRepeat.cpp)
add_executable(TopK2 TopKII_和大于等于k的数目最少子数组/TopK2.cpp)
add_executable(CircleLength 单链表环的长度/CircleLength.cpp)
add_executable(deleteDuplicates 链表去重/deleteDuplicates.cpp)
add_executable(treetoDoubleList 二叉搜索树转为双向链表/treetoDoubleList.cpp)

add_executable(LCA_I 二叉树最小公共祖先/最小公共祖先I_二叉搜索树/LCA.cpp)

add_executable(MyStrtok MyStrtok/MyStrtok.cpp)
add_executable(KMP_test KMP/KMP.cpp)

add_executable(HDU1232 并查集_图的连通性问题/HDU1232.cpp)
add_executable(Kruska kruskal算法与并查集/kruska.cpp)